--- a/WeatherApp/app/build.gradle
+++ b/WeatherApp/app/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:24.1.1'
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
     compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
+    compile 'jp.wasabeef:recyclerview-animators:2.2.4'
 
 }
