--- a/WeatherApp/app/build.gradle
+++ b/WeatherApp/app/build.gradle
@@ -30,5 +30,7 @@ dependencies {
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
     compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
     compile 'jp.wasabeef:recyclerview-animators:2.2.4'
+    compile 'me.itangqi.waveloadingview:library:0.3.2'
+    compile 'com.flaviofaria:kenburnsview:1.0.7'
 
 }
