--- a/WeatherApp/app/build.gradle
+++ b/WeatherApp/app/build.gradle
@@ -19,6 +19,13 @@ android {
     }
 }
 
+repositories {
+    maven {
+        url "https://jitpack.io"
+    }
+}
+
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
@@ -32,5 +39,7 @@ dependencies {
     compile 'jp.wasabeef:recyclerview-animators:2.2.4'
     compile 'me.itangqi.waveloadingview:library:0.3.2'
     compile 'com.flaviofaria:kenburnsview:1.0.7'
+    compile 'info.hoang8f:android-segmented:1.0.6'
+    compile 'com.reginald.swiperefresh:library:1.1.2'
 
 }
