fix map, merge Khanh's code add moreee

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,5 @@ WeatherApp/.idea/misc.xml
 WeatherApp/.idea/vcs.xml
 *.log
 WeatherApp/.idea/gradle.xml
+WeatherApp/.idea/gradle.xml
+WeatherApp/.idea/encodings.xml
