--- a/WeatherApp/app/build.gradle
+++ b/WeatherApp/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "dtui.fit.com.weatherapp"
-        minSdkVersion 15
+        minSdkVersion 21
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
@@ -41,5 +41,9 @@ dependencies {
     compile 'com.flaviofaria:kenburnsview:1.0.7'
     compile 'info.hoang8f:android-segmented:1.0.6'
     compile 'com.reginald.swiperefresh:library:1.1.2'
+    compile 'com.jakewharton:butterknife:5.1.1'
+    compile 'org.jsoup:jsoup:1.9.2'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.google.android.gms:play-services:8.4.0'
 
 }
