--- a/WeatherApp/app/build.gradle
+++ b/WeatherApp/app/build.gradle
@@ -45,5 +45,6 @@ dependencies {
     compile 'org.jsoup:jsoup:1.9.2'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'org.greenrobot:eventbus:3.0.0'
 
 }
