--- a/WeatherApp/app/build.gradle
+++ b/WeatherApp/app/build.gradle
@@ -46,5 +46,9 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.android.gms:play-services:8.4.0'
     compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+//    compile 'com.github.bumptech.glide:glide:3.7.0'
+//    compile 'com.android.support:support-v4:24.1.0'
+    compile 'com.github.jd-alexander:LikeButton:0.2.0'
 
 }
