--- a/WeatherApp/app/src/main/AndroidManifest.xml
+++ b/WeatherApp/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:largeHeap="true">
         <activity
             android:name=".Activity.MainActivity"
             android:screenOrientation="portrait">
@@ -55,7 +56,10 @@
             android:name=".Activity.AddLocationActivity"
             android:theme="@style/AppThemeNormal"
             android:windowSoftInputMode="stateHidden" />
-        <activity android:name=".Activity.SettingDetailActivity"></activity>
+        <activity android:name=".Activity.SettingDetailActivity" />
+        <activity
+            android:name=".Activity.FeedActivity"
+            android:theme="@style/AppThemeFeed"></activity>
     </application>
 
 </manifest>
